--- a/templates/upload.html
+++ b/templates/upload.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    {{ dropzone.create('/upload') }}
+    {{ dropzone.create(action='/upload') }}
     <button id="upload">Upload</button> {{ dropzone.load_js() }} {{ dropzone.config() }}
 
     <br>
