--- a/templates/upload.html
+++ b/templates/upload.html
@@ -14,8 +14,9 @@
     <br>
     <h3>Response is: </h3>
     {{ dropzone.config(custom_options="success: function(file, response)
-    <h1>{response}</h1>") }}
-    <!-- <br> {{response}} <br> {{content}} -->
+    <p>{{response}}</p>{console.log(response);}") }}
+    <br> {{response}} <br> {{content}}
+
 </body>
 
 </html>
