--- a/templates/upload.html
+++ b/templates/upload.html
@@ -32,11 +32,11 @@
 
                     var anchorEl = document.createElement('a');
 
-                    anchorEl.setAttribute('href', response);
+                    anchorEl.setAttribute('href', response[1]);
 
                     anchorEl.setAttribute('target', '_blank');
 
-                    anchorEl.innerHTML = "<br>Download File";
+                    anchorEl.innerHTML = "<br>Test";
 
                     file.previewTemplate.appendChild(anchorEl);
 
