--- a/templates/upload.html
+++ b/templates/upload.html
@@ -30,7 +30,9 @@
                 console.log("result 1:", response);
                 if (response != 0) {
 
-                    const responseResult = response;
+                    const responseResult = JSON.stringify(response);
+                    const name = responseResult[1];
+                    const result = responseResult[2];
                     var anchorEl = document.createElement('a');
 
                     anchorEl.setAttribute('href', responseResult[1]);
@@ -40,8 +42,9 @@
                     anchorEl.innerHTML = "<br>Test";
 
                     file.previewTemplate.appendChild(anchorEl);
-                    console.log("result 2", responseResult);
-
+                    console.log("result 2", responseResult[1]);
+                    console.log("result 3", responseResult[2]);
+                    console.log("result 4", responseResult);
                 }
 
             }
