--- a/templates/upload.html
+++ b/templates/upload.html
@@ -27,14 +27,12 @@
             acceptedFiles: ".jpeg,.jpg,.png,.gif",
 
             success: function(file, response) {
-                console.log("result 1A:", response);
-                console.log("result 1B:", response[1]);
-                console.log("result 1C:", response[2]);
+                console.log("result 1:", response);
                 if (response != 0) {
 
-                    // const responseResult = JSON.stringify(response[1]);
-                    const name = response.split('').pop().split(':')[0];;
-                    const result = response.split('"').pop().split('"')[0];;
+                    const responseResult = JSON.stringify(response);
+                    const name = responseResult.split('').pop().split(':')[0];;
+                    const result = responseResult.split('"').pop().split('"')[0];;
                     var anchorEl = document.createElement('a');
 
                     anchorEl.setAttribute('href', name);
