--- a/templates/upload.html
+++ b/templates/upload.html
@@ -30,9 +30,9 @@
                 console.log("result 1:", response);
                 if (response != 0) {
 
-                    const responseResult = JSON.stringify(response);
-                    const name = responseResult.split('').pop().split(':')[0];;
-                    const result = responseResult.split('"').pop().split('"')[0];;
+                    // const responseResult = JSON.stringify(response);
+                    const name = result.split('').pop().split(':')[0];;
+                    const result = response[property];
                     var anchorEl = document.createElement('a');
 
                     anchorEl.setAttribute('href', name);
