--- a/templates/upload.html
+++ b/templates/upload.html
@@ -31,7 +31,7 @@
                 if (response != 0) {
 
                     const responseResult = JSON.stringify(response);
-                    // const name = responseResult.split('').pop().split(':')[0];;
+                    const name = responseResult[10];
                     // const result = response[property];
                     var anchorEl = document.createElement('a');
 
@@ -42,7 +42,7 @@
                     anchorEl.innerHTML = "<br>Test";
 
                     file.previewTemplate.appendChild(anchorEl);
-                    // console.log("result 2", name);
+                    console.log("result 2", name);
                     // console.log("result 3", result);
                     console.log("result 4", responseResult);
                 }
