--- a/templates/upload.html
+++ b/templates/upload.html
@@ -30,8 +30,8 @@
                 console.log("result 1:", response);
                 if (response != 0) {
 
-                    // const responseResult = response;
-                    const result = result.image_ia
+                    const responseResult = response;
+                    const result = response.image_ia
                         // const result = result.split(':').pop().split('"')[0];;
                     var anchorEl = document.createElement('a');
 
