--- a/templates/upload.html
+++ b/templates/upload.html
@@ -33,15 +33,15 @@
                     const responseResult = response;
                     const result = response.image_ia
                         // const result = result.split(':').pop().split('"')[0];;
-                    var anchorEl = document.createElement('a');
+                    var resultEl = document.createElement('h3');
 
-                    anchorEl.setAttribute('href', name);
+                    // anchorEl.setAttribute('href', name);
 
-                    anchorEl.setAttribute('target', '_blank');
+                    // anchorEl.setAttribute('target', '_blank');
 
-                    anchorEl.innerHTML = "<br>Test " + result;
+                    resultEl.innerHTML = "<br> " + result;
 
-                    file.previewTemplate.appendChild(anchorEl);
+                    file.previewTemplate.appendChild(resultEl);
                     // console.log("result 2", name);
                     console.log("result 3", result);
                     // console.log("result 4", responseResult);
