--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1,107 +1,138 @@
 .btn {
-  text-align: center;
-  width: 70vw;
-  height: 43px;
-  background-color: #66E26F;
-  border-radius: 30px;
-  font-family: "Poppins";
-  font-size: 15px;
-  font-weight: bold;
-  border: none;
-  color: #ffffff;
-  margin: 43px;
-  cursor: pointer; 
-
+    text-align: center;
+    width: 70vw;
+    height: 43px;
+    background-color: #66E26F;
+    border-radius: 30px;
+    font-family: "Poppins";
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+    color: #ffffff;
+    margin: 43px;
+    cursor: pointer;
 }
 
-.dropzone{
-      background: #434956;
-      border-radius: 30px;
-      margin: 30px!important;
-    }
-    @media screen and (max-width: 600px) {
-      .dropzone.dz-clickable .dz-message, .dropzone.dz-clickable .dz-message *{
+.dropzone {
+    background: #434956;
+    border-radius: 30px;
+    margin: 30px!important;
+}
+
+@media screen and (max-width: 600px) {
+    .dropzone.dz-clickable .dz-message,
+    .dropzone.dz-clickable .dz-message * {
         font-size: 1.3em;
-      }
-      .app_name{
+    }
+    .app_name {
         font-size: 30px;
-      }
-      .btn{
+    }
+    .btn {
         font-size: 1.5em;
         text-align: center;
         height: 50px;
-      }
     }
-.btn:focus {
-  outline: 0; }
-
-
-@media (min-width: 768px) {
-  .btn {
-    width: 14vw; 
-    text-align: center;
-  } 
 }
 
+.btn:focus {
+    outline: 0;
+}
+
+@media (min-width: 768px) {
+    .btn {
+        width: 14vw;
+        text-align: center;
+    }
+}
+
+
 /*ALLINEAMENTO DEI DUE CAMPI INPUT*/
+
 .data_insert {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
-  margin-top: 10vh;
-   }
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin-top: 10vh;
+}
+
 
 /*STILE DEI DUE INPUT BOX, PER DEFINIRNE DIMENSIONI*/
+
 .inputfield_style {
-  padding: 0 5px;
-  width: 260px;
-  height: 34px;
-  font-size: 1em;
-  font-family: 'Poppins', sans-serif;
-  color: #464342;
-  margin-top: 10px;
-  font-weight: 400; }
+    padding: 0 5px;
+    width: 260px;
+    height: 34px;
+    font-size: 1em;
+    font-family: 'Poppins', sans-serif;
+    color: #464342;
+    margin-top: 10px;
+    font-weight: 400;
+}
 
 input[type="password"] {
-  font: small-caption;
-  font-size: 30px; }
+    font: small-caption;
+    font-size: 30px;
+}
+
 
 /*POSIZIONAMENTO ICONA OCCHIO FONT AWESOME PER RIVELARE PASSWORD SULLA DESTRA DELL'INPUT BOX*/
+
 .data_insert i {
-  float: right;
-  margin-left: -25px;
-  margin-top: 20px;
-  position: absolute;
-  z-index: 2;
-  color: #464342; }
+    float: right;
+    margin-left: -25px;
+    margin-top: 20px;
+    position: absolute;
+    z-index: 2;
+    color: #464342;
+}
 
 body {
-  background-color: #1A2232;
-  font-family: 'Poppins', sans-serif;
-  color: white;
-  text-align: center; }
+    background-color: #1A2232;
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    text-align: center;
+}
+
 
 /* ALLINEAMENTO TESTO A SINISTRA PER LE LABEL USERNAME E PASSWORD*/
-body > * {
-  text-align: left; }
+
+body>* {
+    text-align: left;
+}
+
 
 /*STILE LOGO*/
+
 .logo {
-  margin-top: 15vh;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center; }
+    margin-top: 15vh;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
 
 .logo img {
-  width: 80px;
-  height: auto; }
+    width: 80px;
+    height: auto;
+}
+
 
 /*STILE PER IL TESTO NOME APP*/
+
 .app_name {
-  font-family: 'Permanent Marker', cursive;
-  font-size: 20px;
-  text-align: center; }
+    font-family: 'Permanent Marker', cursive;
+    font-size: 20px;
+    text-align: center;
+}
 
 
+/*STILE PER IL RICONOSCIMENTO*/
+
+.result {
+    background: #434956;
+}
+
+.dz-image-preview {
+    background: #434956;
+}
