--- a/templates/upload.html
+++ b/templates/upload.html
@@ -22,6 +22,10 @@
             margin: 30px!important;
         }
         
+        .dz-image-preview {
+            background: #434956;
+        }
+        
         @media screen and (max-width: 600px) {
             .dropzone.dz-clickable .dz-message,
             .dropzone.dz-clickable .dz-message * {
