Fix again this stupid CSS

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -22,7 +22,7 @@
             margin: 30px!important;
         }
         
-        .dz-image-preview {
+        .dropzone .dz-preview.dz-image-preview {
             background: #434956;
         }
         
