--- a/templates/upload.html
+++ b/templates/upload.html
@@ -53,6 +53,8 @@
     <script type="text/javascript">
         Dropzone.autoDiscover = false;
         let responseResult = "";
+        let result = "";
+        let resultEl = document.createElement('h3');
 
 
         var myDropzone = new Dropzone(".dropzone", {
@@ -66,17 +68,20 @@
                 if (response != 0) {
 
                     responseResult = response;
-                    let result = responseResult.response
-                    let resultEl = document.createElement('h3');
-                    resultEl.innerHTML = "<br> " + result;
+                    // let result = responseResult.response
+                    // let resultEl = document.createElement('h3');
+                    // resultEl.innerHTML = "<br> " + result;
+                    // resultEl.classList.add("result");
+                    // file.previewTemplate.appendChild(resultEl);
+                    // console.log("result 2", name);
+                    // console.log("result 3", result);
+                    console.log("result 4", responseResult);
+                }
+                for (let i = 0; i < responseResult.response.length; i++) {
+                    resultEl.innerHTML += "<br> " + responseResult.response[i].image_ia;
                     resultEl.classList.add("result");
                     file.previewTemplate.appendChild(resultEl);
-                    // console.log("result 2", name);
-                    console.log("result 3", result);
-                    console.log("result 4", responseResult);
-                    return responseResult;
                 }
-
             }
 
         });
@@ -84,3 +89,9 @@
 </body>
 
 </html>
+
+<!-- for (let i = 0; i < responseResult.response.length; i++) {
+    resultEl.innerHTML += "<br> " + responseResult.response[i].image_ia;
+    resultEl.classList.add("result");
+    document.body.appendChild(resultEl);
+} -->
