--- a/templates/upload.html
+++ b/templates/upload.html
@@ -64,7 +64,7 @@
             acceptedFiles: ".jpeg,.jpg,.png",
 
             success: function(file, response) {
-                console.log("result 1:", response);
+                // console.log("result 1:", response);
                 if (response != 0) {
 
                     responseResult = response;
@@ -79,8 +79,8 @@
                     }
                     // console.log("result 2", name);
                     // console.log("result 3", result);
-                    console.log("result 4", responseResult);
-                    console.log("result 5", responseFile);
+                    // console.log("result 4", responseResult);
+                    // console.log("result 5", responseFile);
                 }
             }
 
