--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,13 @@
     <meta property="og:description" content="A webapp where you can upload up to 10 image per time and get a basic description for each one.">
     <meta property="og:locale" content="English">
     <meta property="og:url" content="https://iam-webapp.herokuapp.com/">
-    <link rel="icon" href="{{ url_for('static', filename='assets/css/style.css') }}" type="image/icon type">
+    <link href="{{ url_for('static', filename='assets/css/style.css') }}" rel="stylesheet">
     <!--CARICAMENTO GOOGLE FONTS POPPINS E PERMANENTMARKER-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-    <link href="/static/assets/css/style.css" rel="stylesheet">
+    <!-- <link href="/static/assets/css/style.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <title>Iam</title>
 </head>
